# ChangeLog for dev-ml/findlib
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.37 2008/04/01 18:19:34 aballier Exp $

  01 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  -files/findlib-1.1.2_p1-sandbox.patch, -findlib-1.0.4-r1.ebuild,
  -findlib-1.1.2_p1.ebuild:
  remove old

  10 Mar 2008; Steve Dibb <beandog@gentoo.org> findlib-1.2.1.ebuild:
  amd64 stable, bug 211966

  09 Mar 2008; Alexis Ballier <aballier@gentoo.org> findlib-1.2.1.ebuild:
  Actually build and install the toolbox with tk useflag

  04 Mar 2008; Raúl Porcel <armin76@gentoo.org> findlib-1.2.1.ebuild:
  alpha/ia64/sparc stable wrt #211966

  04 Mar 2008; Brent Baude <ranger@gentoo.org> findlib-1.2.1.ebuild:
  stable ppc64, bug 211966

  01 Mar 2008; Lars Weiler <pylon@gentoo.org> findlib-1.2.1.ebuild:
  stable ppc, bug 211966

  01 Mar 2008; Christian Faulhammer <opfer@gentoo.org> findlib-1.2.1.ebuild:
  stable x86, bug 211966

  01 Mar 2008; Jeroen Roovers <jer@gentoo.org> findlib-1.2.1.ebuild:
  Stable for HPPA (bug #211966).

  27 Jan 2008; Fabian Groffen <grobian@gentoo.org> findlib-1.0.4-r1.ebuild,
  findlib-1.1.2_p1.ebuild, findlib-1.2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  18 Jan 2008; Alexis Ballier <aballier@gentoo.org> findlib-1.2.1.ebuild:
  restrict installsources, debugedit kills ocamlfind if compiled in bytecode...

  02 Jan 2008; Alexis Ballier <aballier@gentoo.org> findlib-1.2.1.ebuild:
  Add support to build without ocamlopt

*findlib-1.2.1 (13 Nov 2007)

  13 Nov 2007; Alexis Ballier <aballier@gentoo.org> -findlib-1.2.ebuild,
  +findlib-1.2.1.ebuild:
  version bump

*findlib-1.2 (12 Nov 2007)

  12 Nov 2007; Alexis Ballier <aballier@gentoo.org> +findlib-1.2.ebuild:
  version bump

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing mattam from metadata due to his retirement (see #30021 for reference).

*findlib-1.1.2_p1 (14 Mar 2007)
