@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/findlib-1.2.1.ebuild,v 1.11 2008/03/10 15:06:44 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/findlib-1.2.1.ebuild,v 1.12 2008/06/07 16:31:47 aballier Exp $
 
 inherit multilib eutils
 
@@ -11,13 +11,13 @@ IUSE="doc +ocamlopt tk"
 RESTRICT="installsources"
 
 DESCRIPTION="OCaml tool to find/use non-standard packages."
-HOMEPAGE="http://www.ocaml-programming.de/packages/"
-SRC_URI="http://www.ocaml-programming.de/packages/${P}.tar.gz"
+HOMEPAGE="http://projects.camlcity.org/projects/findlib.html"
+SRC_URI="http://download.camlcity.org/download/${P}.tar.gz"
 
 LICENSE="MIT X11"
 
 SLOT="0"
-KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
 
 DEPEND=">=dev-lang/ocaml-3.07"
 
